# larch

./: README.md
docs/: v2.md
docs/v3/: asm.md  core.md  ext_chardev.md  ext_chardev_ascii.md
examples/v1/: mul.hex
examples/v2/: forloop_v2.asm  mul_v2.asm
mcc/: mcc.md
mcc/docs/: v1.md  v2.md
mcc/docs/v3/: asm.md  core.md  ext_chardev_ascii.md
mcc/programs/v1/: mul.asm
mcc/programs/v2/: build.sh  faculteit.rs  mul_v2.asm
mcc/programs/v3/: build.sh  mul.asm
mcc/tools/: install.sh
mcc/tools/libmcc/: Cargo.toml
mcc/tools/libmcc/src/v2/: mod.rs
mcc/tools/libmcc/src/v3/: mod.rs
mcc/tools/mccasm/: Cargo.toml
mcc/tools/mccasm/src/: main.rs
mcc/tools/mccemu/src/: main.rs
nna/spec/: devices.md  nna1.md
nna/tools/: Cargo.toml  install.sh
nna/tools/libnna/: Cargo.toml
nna/tools/libnna/src/: lib.rs  u2.rs  u4.rs  usmol.rs
nna/tools/nnaasm/: Cargo.toml
nna/tools/nnaasm/src/: main.rs  util.rs
nna/tools/nnaasm/src/asm/: codeparser.rs  mod.rs  parse.rs  parselex.rs
programs/v2/: forloop_v2.asm
programs/v3/: add_test.asm  build.sh  echo.asm  hello_world.asm  input.asm  mul.asm  test.asm
tools/: Cargo.toml  install.sh
tools/libmcc/: Cargo.toml
tools/libmcc/src/: lib.rs
tools/libmcc/src/v3/: mod.rs
tools/mccasm/: Cargo.toml  install.sh
tools/mccasm/src/: asm.rs  emiting.rs  main.rs  util.rs
tools/mccasm/src/asm/: codegen.rs  lexing.rs  mod.rs
tools/mccasm/src/asm/v3/: codegen.rs  lexing.rs  mod.rs
tools/mccemu/: Cargo.toml
tools/mccemu/src/: emulator.rs  main.rs
tools/mccemu/src/ext/: chardev.rs  mod.rs
(+5 files in other folders)
