[package]
name = "mccasm"
authors =["ldev <ldev@ldev.eu.org>"]
description="Assembler for for the mcc assembly language"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
libmcc = {path="../libmcc"}
