[package]
name = "mccasm"
authors =["ldev <ldev@ldev.eu.org>"]
description="Assembler for for the mcc assembly language"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version="0.4.21"}
clap = { version = "4.5.3", features = ["derive"] }
libmcc = {path="../libmcc"}
